cmake_minimum_required(VERSION 3.10)
project(openvino-test)
find_package(OpenVINO REQUIRED)
set(TARGET_NAME test)
# Use the homebrew version because xcode clang doesn't have detect_leaks
if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
set(CMAKE_C_COMPILER /usr/local/opt/llvm@13/bin/clang)
endif ()
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fsanitize=leak -g")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address -fsanitize=leak -g")
add_executable(${TARGET_NAME} src/main.c)
target_link_libraries(${TARGET_NAME} PRIVATE openvino::runtime)
target_link_libraries(${TARGET_NAME} PRIVATE openvino::runtime::c)
